<resources>
    <string name="app_name">RMP4</string>
    <string name="selectCurrency">Выберите валюту</string>
    <string name="eur">eur</string>
    <string name="usd">usd</string>
    <string name="rub">rub</string>
    <string name="wtf">WTF</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="cancel">Отмена</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ac">Сброс</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="enter">Получить</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_000">000</string>
    <string name="change">Сменить</string>
</resources>