<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:text=""
        android:textAlignment="textEnd"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="326dp"
        android:layout_height="3dp"
        android:background="@color/grey"
        android:gravity="start|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:onClick="exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ac"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        android:onClick="clear"/>

    <Button
        android:id="@+id/change_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:onClick="change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        />

    <Button
        android:id="@+id/result_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:onClick="result"/>

    <Button
        android:id="@+id/dot_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/dot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        android:onClick="addPoint"/>

    <Button
        android:id="@+id/zeros"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_000"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/zero"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/one"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/two"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/three"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/four"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/five"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/six"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_7"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_8"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        android:onClick="addDigit"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_9"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        android:onClick="addDigit"/>

</androidx.constraintlayout.widget.ConstraintLayout>